[tool.poetry]
name = "api-blog"
version = "0.1.0"
description = "API for Blog App"
authors = ["JoaoNogueira23 <joao.n.m23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
uvicorn = "^0.30.6"
asyncpg = "^0.29.0"
faker = "^29.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
