[tool.poetry]
name = "api-blog"
version = "0.1.0"
description = "API for Blog App"
authors = ["JoaoNogueira23 <joao.n.m23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
uvicorn = "^0.30.6"
asyncpg = "^0.29.0"
faker = "^29.0.0"
fastapi-pagination = "^0.12.27"
pyjwt = "^2.9.0"
passlib = "^1.7.4"
pycryptodome = "^3.9"
python-jose = "^3.3.0"
python-decouple = "^3.8"
python-multipart = "^0.0.9"
uuid6 = "^2024.7.10"
bcrypt="^3.2.0"
google-cloud-storage = "^2.18.2"
pathlib = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
